tests/fixtures/invalid/none_lshift_str.py
# Cannot left shift None and Str
x: None = None << "hello"
